[package]
name = "mpl-cli"
version = "0.1.0"
edition = "2021"
authors = ["boldandbrad"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.3.23", features = ["derive", "cargo"] }
clap_complete = "4.3.2"
hard-xml = "1.27.0"
reqwest = { version = "0.11.22", features = ["blocking"] }
semver = "1.0.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
whoami = "1.4.1"

[[bin]]
name = "mpl"
path = "src/main.rs"
