[package]
name = "mpl-cli"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["boldandbrad"]
description = "Manage local board game stashes and interact with BoardGameGeek from your terminal."
repository = "https://github.com/boldandbrad/mpl-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde", "rustc-serialize"]}
clap = { version = "4.3.23", features = ["derive", "cargo"] }
clap_complete = "4.3.2"
html-escape = "0.2.13"
reqwest = { version = "0.11.22", features = ["blocking"] }
ron = "0.8.1"
semver = "1.0.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_yaml = "0.9.25"
thiserror = "1.0.56"
toml = "0.8.8"
whoami = "1.4.1"
xmltree = "0.10.3"

[[bin]]
name = "mpl"
path = "src/main.rs"
