[package]
name = "mpl-cli"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["boldandbrad"]
description = "Manage local board game stashes and interact with BoardGameGeek from your terminal."
repository = "https://github.com/boldandbrad/mpl-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.33", features = ["serde"]}
clap = { version = "4.4.18", features = ["derive", "cargo"] }
clap_complete = "4.4.10"
html-escape = "0.2.13"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
ron = "0.8.1"
semver = "1.0.21"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
thiserror = "1.0.56"
toml = "0.8.9"
whoami = "1.4.1"
xmltree = "0.10.3"

[[bin]]
name = "mpl"
path = "src/main.rs"
